NetBSD Problem Report #55211

From gson@gson.org  Sun Apr 26 18:43:38 2020
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B589F1A9217
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 26 Apr 2020 18:43:37 +0000 (UTC)
Message-Id: <20200426184332.52D31253F35@guava.gson.org>
Date: Sun, 26 Apr 2020 21:43:32 +0300 (EEST)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: fs/vfs/t_vnops:nfs_dir_rmdirdotdot test fails
X-Send-Pr-Version: 3.95

>Number:         55211
>Category:       kern
>Synopsis:       fs/vfs/t_vnops:nfs_dir_rmdirdotdot test fails
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    hannken
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Apr 26 18:45:02 +0000 2020
>Closed-Date:    Sun May 03 09:07:48 +0000 2020
>Last-Modified:  Sun May 03 09:07:48 +0000 2020
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current, source date >= 2020.04.19.13.26.17
>Organization:

>Environment:
System: NetBSD
Architecture: x86_64
Machine: amd64
>Description:

The fs/vfs/t_vnops:nfs_dir_rmdirdotdot test case is failing for me on
real amd64 hardware:

  http://www.gson.org/netbsd/bugs/build/amd64-baremetal/commits-2020.04.html#2020.04.19.13.26.17

The problem started with these commits:

  2020.04.19.13.25.00 hannken src/sys/kern/vfs_vnode.c 1.121
  2020.04.19.13.26.17 hannken src/sys/kern/vfs_mount.c 1.79

I'm also seeing failures under "qemu-system-x86_64 -accel nvmm", but
not under plain qemu.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->hannken
Responsible-Changed-By: gson@NetBSD.org
Responsible-Changed-When: Sun, 26 Apr 2020 18:53:50 +0000
Responsible-Changed-Why:
Over to committer.


From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55211 CVS commit: src/sys/ufs/ufs
Date: Fri, 1 May 2020 08:43:37 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Fri May  1 08:43:37 UTC 2020

 Modified Files:
 	src/sys/ufs/ufs: ufs_vfsops.c

 Log Message:
 There is no difference between a zero-sized and not yet
 reclaimed directory vnode and a non-existent vnode.

 Teach ufs_fhtovp() to treat zero-sized directories as stale.

 PR kern/55211 (fs/vfs/t_vnops:nfs_dir_rmdirdotdot test fails)


 To generate a diff of this commit:
 cvs rdiff -u -r1.59 -r1.60 src/sys/ufs/ufs/ufs_vfsops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Fri, 01 May 2020 08:46:15 +0000
State-Changed-Why:
Committed a fix -- please confirm.


State-Changed-From-To: feedback->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Sun, 03 May 2020 09:07:48 +0000
State-Changed-Why:
Confirmed fixed, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.